src/App.css
@import url('https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&family=Geist:wght@100..900&display=swap');

:root {
  --primary: #FF5C04;
}
body {
  margin: 0;
  font-family: 'Geist', sans-serif;
}

.top-button {
  width: fit-content;
  height: fit-content;
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 4px;
  padding-bottom: 4px;
  border-radius: 800px;
  background-color: var(--primary);
  color: white;
  font-size: 24px;
  letter-spacing: -6%;
}

.top-bar {
  width: calc(100% - 60px);
  margin-left: 30px;
  margin-right: 30px;
  height: fit-content;
  margin-top: 30px;
  display: flex;
  justify-content: space-between;
}

